
2009-01-23 tdb
 * Make the default allow_null() for MetaFields: FIXME properly
 * Now locate thumbnails via eprintid/docid.RELATION

2009-01-27 tdb
 * Don't encode pathing in files, fixing #3393

2009-02-02 tdb
 * Allow https access to anything under /cgi/, fixing autocomplete scripts

2009-02-05 tdb
 * Added XML library information to Status screen

2009-02-11 tdb
 * Fixed wide-char warning in Net::Cmd
 * Added support for UTF-8 email headers (addresses & subject)

2009-02-13 tdb
 * Added support for custom OAI sets, see #3271

2009-02-17 tdb
 * Added core support for cfg.d-supplied datasets
 * Added an epadmin command to drop unused cache tables
 * Alpha FTP daemon - provides FTP access to the user's inbox

2009-02-24 cjg + dct
 * Tidyup & refactoring on FormatRisks plugin.

2009-02-24 cjg + dct
 * tidying up the tidyup on formatrisks.

2009-02-25 cjg
 * Added InputForm::UploadMethod plugins
 * These are now used by the Upload component to allow new tabs to be added.
 * Tiditied up tabs css and widened the tabs a little.
 * A processor is now passed to the workflow and component get_state_params
 * Improved handling of the logic on which documents to show unrolled.

2009-02-26 tdb
 * Fixed OAI GetRecord always returning a record, fixing #3498

2009-02-27 tdb
 * Only decode strings returned from the XML library if they aren't utf8
 * Set the output encoding (in header or file handle) in Export plugins

2009-03-04 tdb
 * Added a field property "sql_counter"
 * Added "sql_counter"s to all keyfields that use counters
 * Datasets can now be defined per-repository using $c->{datasets}
 * Counters are now created based on field definitions
 * Added example custom dataset

2009-03-17 cjg
 * Document toolbox document add now reports document id rather than "OK"
 * Fixed bug in Field::Multi which didn't allow <help> in both the component
    and inside the field.
 * Added temporary conf settings to bin/toolbox to allow file & web import.